Fix - layout issue for mesonry view on single activity page

--- a/app/assets/css/rtmedia.css
+++ b/app/assets/css/rtmedia.css
@@ -1540,8 +1540,9 @@ img.mfp-img {
   clear: both;
 }
 .rtmedia-activity-container .rtmedia-list-item.masonry-brick {
+  display: inline-block;
   float: left;
-  width: 33%;
+  width: 32%;
   padding: 0 !important;
 }
 .rtmedia-activity-container .rtmedia-list-item.masonry-brick .mejs-container {
