--- a/app/assets/css/sass/_activity.scss
+++ b/app/assets/css/sass/_activity.scss
@@ -29,8 +29,9 @@
 	}
 
 	.rtmedia-list-item.masonry-brick {
+		display: inline-block;
 		float: left;
-		width: 33%;
+		width: 32%;
 		padding: 0 !important;
 
 		.mejs-container {
